--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -2,55 +2,78 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="100dp">
+    >
 
 
     <EditText
         android:id="@+id/med_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
+        android:hint="name"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="61dp"
+        android:ems="10"
         android:inputType="text"
-        />
+        tools:layout_editor_absoluteX="84dp"
+        tools:layout_editor_absoluteY="53dp"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/med_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/med_name"
-        android:ems="10"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="50dp"
+        android:autofillHints=""
+        android:ems="10"
+        android:hint="amount"
         android:inputType="number"
-        />
+        tools:layout_editor_absoluteX="84dp"
+        tools:layout_editor_absoluteY="106dp" />
 
     <EditText
         android:id="@+id/med_freqency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:hint="freqency"
         android:layout_below="@+id/med_amount"
         android:ems="10"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="50dp"
         android:inputType="number"
-        />
+        tools:layout_editor_absoluteX="84dp"
+        tools:layout_editor_absoluteY="156dp"
+        android:autofillHints="" />
 
     <Button
-        android:id="@+id/save"
+        android:id="@+id/button_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="save"
-        android:textSize="40sp"
+        android:textSize="25sp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/med_freqency"
         android:layout_marginTop="100dp"
-        />
+        tools:layout_editor_absoluteX="184dp"
+        tools:layout_editor_absoluteY="200dp"
 
+        />
+    <Button
+        android:id="@+id/button_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="back"
+        android:textSize="25sp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/button_save"
+        android:layout_marginTop="25dp"
+        tools:layout_editor_absoluteX="184dp"
+        tools:layout_editor_absoluteY="200dp"
+     />
 
 
 
