--- a/app/src/main/res/layout/ayctivity_main2.xml
+++ b/app/src/main/res/layout/ayctivity_main2.xml
@@ -66,15 +66,10 @@
 
     <ListView
         android:id="@+id/lv"
-        android:layout_width="409dp"
-        android:layout_height="530dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="7dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/add" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/overview"
+        tools:ignore="MissingConstraints" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
